commit japanese translations

--- a/jp/index-year.html
+++ b/jp/index-year.html
@@ -90,6 +90,12 @@
             <p>年</p>
           </div>
 
+          <a href="javascript:void(0);" onclick="window.open('project/illustration.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > 絵 </p>
+            <p > グラフィック</p>
+            <p> 2023 </p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/kafkas_daughter.html','9','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
             <p > カフカの娘</p>
             <p>服</p>
