--- a/jp/index.html
+++ b/jp/index.html
@@ -142,6 +142,12 @@
             <p>年</p>
           </div>
 
+          <a href="javascript:void(0);" onclick="window.open('project/illustration.html','14','width=600,height=700')" rel="noreferrer noopener"><div class="listSplit">
+            <p > 絵 </p>
+            <p ></p>
+            <p> 2023 </p>
+          </div></a>
+
           <a href="javascript:void(0);" onclick="window.open('project/objects on parade.html','5','width=300,height=300')" rel="noreferrer noopener"><div class="listSplit">
             <p> 練り歩くオブジェクトたち </p>
             <p></p>
