--- a/jp/project/Watertower.html
+++ b/jp/project/Watertower.html
@@ -1,18 +1,18 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title>Watertower Stickers</title>
+  <title>給水塔のスタンプ</title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Watertower Stickers</p>
+    <p>給水塔のスタンプ</p>
     </div>
 
     <div class="content">
-    <p>Inspired by our mutual love of landscape-scale vessels for Water, a set of animated Stickers available on <a href="https://store.line.me/stickershop/product/14349634/en" target="blank" rel="noopener noreferrer">LINE</a> produced in collaboration with <a href="https://olivershore.com" target="blank" rel="noopener noreferrer">Oliver Shore</a> together as <a href="https://store.line.me/stickershop/author/1732440/en" target="blank" rel="noopener noreferrer">Objects on Parade</a>.</p>
-    <p>Towers were designed though a process of trading the 3D models for eachother to edit and add details to, Then rotated and rendered by Oliver.</p>
+    <p>給水塔に対する共通の興味を持つ<a href="https://olivershore.com" target="blank" rel="noopener noreferrer">Oliver Shore</a>氏と一緒に<a href="https://store.line.me/stickershop/author/1732440/en" target="blank" rel="noopener noreferrer">Objects on Parade</a>として<a href="https://store.line.me/stickershop/product/12918234/en" target="blank" rel="noopener noreferrer">LINE</a>スタンプの作品を作りました。</p>
+
     <p><br></p>
     <img src="../../image/water-tower/tower overview.jpg" width="550px"></img>
     <p><br></p>
