--- a/jp/project/antenna.html
+++ b/jp/project/antenna.html
@@ -1,7 +1,7 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title> Rooftop Antenna </title>
+  <title> 屋上アンテナ </title>
 </html>
 
 <body class="page">
@@ -11,7 +11,7 @@
     </div>
 
     <div class="content">
-      <p>アンビエント・ミュージックやエレクトロニカのラジオ番組。前はゴルドスミス大学の公式インターネットラジオ局「wired radio」で放送していましたが、今は新しい実験音楽的レコードレイベル「Altamira Records」と協力として出しています。</p>
+      <p>アンビエント・ミュージックやエレクトロニカのラジオ番組。前はゴルドスミス大学の公式インターネットラジオ局「wired radio」で放送していましたが、今は新しい実験的な音楽レコードレーベル「Altamira Records」と協力として出しています。前のゲストは高橋 征司氏、Iglooghost氏、Hironori Nagatsuma氏にお願いしました。</p>
 
 
     <img src="../../image/antenna/cover for radio show-02.png" width="400px"></img>
