--- a/jp/project/boltbook.html
+++ b/jp/project/boltbook.html
@@ -12,7 +12,7 @@
 
     <div class="content">
 
-      <p>A simple book made from scratch during a bookbinding workshop.</p>
+      <p>製本研修会で作ったシンプルな本。</p>
 
 
     <br>
