--- a/jp/project/breakwater.html
+++ b/jp/project/breakwater.html
@@ -1,18 +1,20 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title>Breakwater Objects</title>
+  <title>テトラポッドのスタンプ</title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Breakwater Objects</p>
+    <p>テトラポッドのスタンプ</p>
     </div>
 
     <div class="content">
-    <p>Inspired by our mutual love of Breakwater objects, a set of Stickers available on <a href="https://store.line.me/stickershop/product/12918234/en" target="blank" rel="noopener noreferrer">LINE</a> produced in collaboration with <a href="https://olivershore.com" target="blank" rel="noopener noreferrer">Oliver Shore</a> together as <a href="https://store.line.me/stickershop/author/1732440/en" target="blank" rel="noopener noreferrer">Objects on Parade</a>.</p>
-    <p>Modelled by Caleb Woodward, textured by Oliver Shore.</p>
+    <p>テトラポッドに対する共通の興味を持つ<a href="https://olivershore.com" target="blank" rel="noopener noreferrer">Oliver Shore</a>氏と一緒に<a href="https://store.line.me/stickershop/author/1732440/en" target="blank" rel="noopener noreferrer">Objects on Parade</a>として<a href="https://store.line.me/stickershop/product/12918234/en" target="blank" rel="noopener noreferrer">LINE</a>スタンプの作品を作りました。</p>
+    <p>モデル：ケイレブ・ウッドワード</p>
+    <p>テクスチャ：オリバー・ショア</p>
+
     <p><br></p>
     <img src="../../image/breakwater/breakwater overview.jpg" width="550px"></img>
     <p><br></p>
