--- a/jp/project/buildit.html
+++ b/jp/project/buildit.html
@@ -1,17 +1,17 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title> Build-It Note </title>
+  <title> ビルド・イット付箋</title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Build-It Note</p>
+    <p>ビルド・イット付箋</p>
     </div>
 
     <div class="content">
-      <p>Concept & Prototype for Stackable blocks of Post-it notes reminicent of Skyscrapers, creating a little city on your desk.</p>
+      <p>重ねられる超高層建築物のような付箋のコンセプトとプロトタイプ。机の上に小さいな街を作ることができます。</p>
 
 
 
