--- a/jp/project/comfort-clothing.html
+++ b/jp/project/comfort-clothing.html
@@ -1,21 +1,22 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title>Comfort-Seeking Clothing</title>
+  <title>居心地を探す服</title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Comfort-Seeking Clothing</p>
+    <p>居心地を探す服</p>
     </div>
 
     <div class="content">
-    <p>“Comfort-Seeking Clothing” is a set of several wearable objects and garments that either express or evoke a sense of comfort, sleepiness, and insulated vulnerability. I adapted the pure-white language and sensations of duvets, pillows, and pyjamas evoking a safe and sleepy feeling, as well as mimicking the functional and vulnerable feeling of medical or convalescent clothing.</p>
-    <p>Confined to our homes, we’ve spent the last year in a cocoon-like state of hibernation and self-care, the scope of our daily environments becoming exclusively domestic and interior, our instincts for empathy imprinted into inanimate things.</p>
-    <p>As protection from a real but intangible threat in the outside world becomes the most important priority, the importance of the sense of comfort in insulation against the outside is more tangible than ever, our home spaces infused with hospital-like feelings of convalescence from the increased sense of vulnerability and dependance on the sterile and medical in daily life.</p>
-    <p>Most important to me in this project was to instil a sense of “anchoring” or “grounding”, so I designed and made a set of weights to attach to different points on the body that can also be removed and sit on pressure points. A large Tetrapod-shaped pillow is a huggable human-scale version of sturdy concrete coastal wave defences, creating a feeling of protection and security.</p>
-    <p>Modelled by <a href="https://www.instagram.com/_mey.line_/" target= "blank" rel="noreferrer noopener">Alice Ferrante</a>.</p>
+    <p>「居心地を探す服」とは居心地や眠たさと守られた脆弱性の関係を表現する着られるオブジェです。</p>
+    <p>布団、枕、パジャマの真っ白なデザイン言語や感触から要素を借りて、安全で眠い気分を表現しています。病院で着るパジャマのもろさと機能的な印象も真似ています。</p>
+    <p>コロナのロックダウン中は繭のように家で封じ込められた生活で、日常的な環境の範囲が全く内部になると、共感の本能は無機物に刻み込まれます。</p>
+    <p>外の世界にある無形の脅威から身を守ることがいちばん大切な点になると、居心地の大切さが前より感じられ、家の内部には病院のような無菌の空気が漂い、その中で静養する毎日を送るようになります。</p>
+    <p>快適な気分を作るため、この作品で大切なことは「停泊」のイメージを吹き込むことでした。体の色々なところに付ける重りを作りました。大きな抱き抱えられるテトラポッドの形の枕は人間のための丈夫な防波堤の役目をはたしています。</p>
+    <p>モデル：　<a href="https://www.instagram.com/_mey.line_/" target= "blank" rel="noreferrer noopener">Alice Ferrante</a>.</p>
     <p></p>
     <img src="../../image/comfort-clothing/01.jpg" width="560px"></img>
     <p></p>
