--- a/jp/project/dogs-wall.html
+++ b/jp/project/dogs-wall.html
@@ -1,22 +1,23 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title> Dog's Wall </title>
+  <title> 犬の壁 </title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Dog's Wall</p>
+    <p>犬の壁</p>
     </div>
 
     <div class="content">
-      <p>* Winning entry - Architecture for Dogs design competition at <a href="https://www.japanhouselondon.uk/" target="blank" rel="noreferrer noopener">Japan House London</a>. *<br> Selected by Tim Marlow, Head of the <a href="https://designmuseum.org/" target="blank" rel="noreferrer noopener">Design Museum</a>.</p>
-      <p>“Dog’s Wall” is a false wall that offers a cosy hideaway for a dog as well as practical shelving for its human companion. Within the wall are several openings through which the dog can perch itself to observe the room and interact with its owner, as well as more secluded spots to allow a dog a comfortable personal space.</p>
-      <p>Holes in the wall where the dog can stick its head out offer opportunities for playful interactions, while integrated storage and shelving space creates a practical function. By combining the human’s and dog’s space within a home and creating a “shared” environment, the world of human and dog are integrated in a more equal dynamic than Pet and Owner.</p>
-      <p>Tim Marlow’s comments:<br>
 
-  “ I like the good use of space and the idea of the dog as spectacle and spectator… framed high up on the wall like a living sculpture!”</p>
+      <p>＊受賞応募作品・<a href="https://www.japanhouselondon.uk/" target="blank" rel="noreferrer noopener">Japan House London</a>の「犬のため建築」展覧会・ロンドンの<a href="https://designmuseum.org/" target="blank" rel="noreferrer noopener">Design Museum</a>の館長Tim Marlow氏が選びました。</p>
+      <p>「犬の壁」とは犬のため心地よく隠れることのできるところで、飼う人にも役に立つ棚です。壁には色々な穴があり、犬がそこから部屋を見回すことができます。壁の中には静かなところがあって、犬が休めるようになっています。</p>
+      <p>壁の穴から犬が頭を出せるので、遊びの心が自然に起こります。家の中に、人間と犬が共有できる環境が生まれ、飼い主とペットいう関係以上の平等な居場所ができます。</p>
+      <p>Tim Marlow氏のコメント：<br>
+
+        「空間を使う方法がうまくできていて好きです。犬が見せ物と観客の両方になるというアイディアがいいと思います。生きている彫刻のように壁に枠をつけています！」</p>
     <br>
     <br>
     <img src="../../image/dogs wall/dogs wall line.png" width="550px"></img>
