--- a/jp/project/illustration.html
+++ b/jp/project/illustration.html
@@ -1,23 +1,23 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title>Illustration</title>
+  <title>絵</title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Illustration</p>
+    <p>絵</p>
     </div>
 
     <div class="content">
-      <p>Various illustration work. I work predominantly in pencil.</p>
+      <p>色々の描いた絵。鉛筆で描くことが多いです。</p>
 
       <br>
       <br>
-      <img src="../image/illustration/VeniceW.png" width="100%"></img>
+      <img src="../../image/illustration/VeniceW.png" width="100%"></img>
       <br>
-      <p>Fashion illustration - <a href="https://venicew.com" target="blank">VeniceW</a>'s 2023 SS Collection 'Question Mark Island'</p>
+      <p>ファション挿絵 - <a href="https://venicew.com" target="blank">VeniceW</a>の 2023 SS コレクション 'Question Mark Island'</p>
       <div class="threeSplit">
         <img src="../../image/illustration/venice zoom a.png" width="100%"></img>
 
@@ -29,26 +29,26 @@
       <br>
       <img src="../../image/illustration/prague.png" width="100%"></img>
       <br>
-      <p>From a trip to Prague, Czechia</p>
+      <p>チェコのプラハへの旅行から</p>
 
       <br>
       <br>
       <img src="../../image/illustration/flash.png" width="100%"></img>
       <br>
-      <p>Tattoo Flash for an artist based in Austin, Texas.</p>
+      <p>テキサスの彫師のためタトゥーフラッシュ</p>
 
       <br>
       <br>
       <img src="../../image/illustration/yohji fruits.jpg" width="100%"></img>
       <br>
-      <p>Fashion Illustration - Yohji Yamamoto ensembles and outfit from Fruits magazine.</p>
+      <p>ファション挿絵 - 山本耀司とFRUiTS雑誌の衣装</p>
 
 
       <br>
       <br>
       <img src="../../image/illustration/sketchbook 3.png" width="100%"></img>
       <br>
-      <p>Fashion Illustration/ Character design for <a href="kafkas_daughter.html">'Kafka's Daughter'.</a></p>
+      <p><a href="kafkas_daughter.html">カフカの娘</a>のためファション挿絵とキャラクターデザイン。</p>
 
 
 
