--- a/jp/project/jewellery.html
+++ b/jp/project/jewellery.html
@@ -1,33 +1,33 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title>Jewellery</title>
+  <title>宝飾</title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Jewellery</p>
+    <p>宝飾</p>
     </div>
 
     <div class="content">
 
-      <p>I was inspired by my mother's jewellery practice to try to learn how to make a few simple pieces under her instruction. I'm excited to experiment more with different metal and jewellery techniques and ideas in the future.</p>
+      <p>母の宝飾デザイン・ビジネスからインスピレーションを受けて、シンプルな宝飾を作る方法を取り入れてみました。色々な技術と金属で実験するのはとても楽しいことでした。</p>
       <br>
       <br>
       <div class="twosplit">
-        <p> Ring (Silver)</p>
+        <p> 指輪 (銀)</p>
         <p> 2021 08</p>
       </div>
       <br>
       <img src="../../image/jewellery/ring.jpg" width="100%"></img>
       <br>
       <br>
-      <p>A simple silver ring with a hand-punched two dot motif.</p>
+      <p>二つ点のシンプルな銀指輪。</p>
       <br>
       <br>
       <div class="twosplit">
-        <p> Cuff (Silver)</p>
+        <p> ブレスレット (銀)</p>
         <p> 2022 01</p>
       </div>
       <br>
@@ -37,7 +37,7 @@
       <p></p>
       <img src="../../image/jewellery/cuff 2.jpg" width="100%"></img>
       <p></p>
-      <p>Following the ring, I was commissioned to create a simple silver cuff with a similar two dot motif.</p>
+      <p>指輪を作った後、同様二つ点のブレスレットを作るようにコミッションされました。</p>
 
     </div>
 
