--- a/jp/project/kafkas_daughter.html
+++ b/jp/project/kafkas_daughter.html
@@ -1,20 +1,20 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title>Kafka's Daughter</title>
+  <title>カフカの娘</title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Kafka's Daughter</p>
+    <p>カフカの娘</p>
     </div>
 
     <div class="content">
-      <p> Final Project at Goldsmiths.</p>
-      <p> Kafka’s Daughter is a narrative told through a series of boxes containing objects, garments, illustrations, and a novelette. The project tells the story of a character, Lana Kammel, and her imagined telepathic connection with Czech author Franz Kafka. The viewer is invited to explore the boxes, which contain various artefacts both taken from and exterior to the fiction: Lana’s Dress, a recreation of Kafka’s “Odradek” from “the cares of a family man”, a copy of Gustav Janouch’s “Conversations with Kafka”, various design sketches and illustrations, and a hand-bound copy of “Kafka’s Daughter” itself. </p>
-      <p>Through this project, I am exploring material practice as a means to expand fiction writing into a cross-medium object, as well as exploring the relationship between reader and writer as encoders and decoders separated by gaps in time, space, language, and experience. </p>
-      <p><a href="Kafkas_Daughter.pdf" target="blank">Read the Novelette</a></p>
+      <p> Goldsmiths大学で最終的な作品</p>
+      <p> カフカの娘はオブジェックト、服、絵、中編小説が入った箱のシリーズで描かれた物語です。作品はLana Kammelという少女の架空のフランズ・カフカ氏との関係についての話です。読者に箱を開けるように誘っていて、カフカ氏の「The cares of a family man」から「Odradek] というオブジェックト、グスタブ・ヤヌック氏の「Conversations with Kafka」という本、色々のデザインスケッチと写真、それに手で製本した「Kafka's Daughter」の小説が入っています。 </p>
+      <p>このプロジェクトを通し、創作文学とオブジェクト制作の兼ね合いが織りなすフィクションの拡張を研究しようとしています。時間、空間、言語で離れているエンコーダとデコーダとして読む人と作家の関係も探っています。</p>
+      <p><a href="Kafkas_Daughter.pdf" target="blank">小説を読む　（英語）</a></p>
 
       <img src="../../image/kafkas_daughter/IMG_7702.jpeg" width="100%"></img>
       <p></p>
