--- a/jp/project/logo.html
+++ b/jp/project/logo.html
@@ -1,21 +1,21 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title> Logo</title>
+  <title> ロゴ</title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Logo</p>
+    <p>ロゴ</p>
     </div>
 
     <div class="content">
-      <p>Selected Logo work, both Personal and for Clients.</p>
+      <p>自分とクライエントのためのロゴ作品。</p>
 
       <img src="../../image/logo/Logos layout-01.png" width="100%"></img>
       <div class="twosplit">
-        <p> Set of Nine Logos</p>
+        <p> 九つのロゴ</p>
         <p> 2021</p>
       </div>
       <p></p>
