--- a/jp/project/machineglasses.html
+++ b/jp/project/machineglasses.html
@@ -1,18 +1,18 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title> Machine Glasses </title>
+  <title> マシン・メガネ </title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Machine Glasses</p>
+    <p>マシン・メガネ</p>
     </div>
 
     <div class="content">
-      <p>Prototype for steel-framed eyewear.</p>
-      <p>Frames: Hand bent and drilled.<br>Stems: Wazer cut from CNC file.<br>Lenses and Hinges: Salvaged from defunct glasses.</p>
+      <p>鋼フレームメガネのプロトタイプ。</p>
+      <p>フレーム：手で曲げてドリルで打ち付けてあります<br>ステム：CNCファイルからWazerで切りました。<br>レンズとヒンジ：リサイクルしたメガネから</p>
 
 
 
