--- a/jp/project/objects on parade.html
+++ b/jp/project/objects on parade.html
@@ -1,17 +1,17 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title> Objects on Parade</title>
+  <title> 練り歩くオブジェクトたち</title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Objects on Parade</p>
+    <p>練り歩くオブジェクトたち</p>
     </div>
 
     <div class="content">
-      <p> Collaboration with <a href="https://olivershore.com/" target="blank" rel="noreferrer noopener">Oliver Shore</a>.</p>
+      <p><a href="https://olivershore.com/" target="blank" rel="noreferrer noopener">Oliver Shore</a>とのプロジェクト.</p>
       <div class="twosplit">
         <div>
           <a href="javascript:void(0);" onclick="window.open('Watertower.html','name','width=600,height=700')" rel="noreferrer noopener"><img src="../../image/water-tower/Tower 8.gif" width="90px"></img></a>
