--- a/jp/project/perfume.html
+++ b/jp/project/perfume.html
@@ -1,17 +1,17 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title>Machine Perfume</title>
+  <title>マシン・香水</title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Machine Perfume</p>
+    <p>マシン・香水</p>
     </div>
 
     <div class="content">
-      <p>A perfume container that I lathed from solid aluminium. Notes of Metal and Oil.</p>
+      <p>アルミニウムから旋盤で作った香水の入れ物。</p>
       <img src="../../image/perfume/IMG_7212.jpeg" width="100%"></img>
       <p></p>
       <img src="../../image/perfume/IMG_7178.jpeg" width="100%"></img>
