--- a/jp/project/radiometer.html
+++ b/jp/project/radiometer.html
@@ -1,19 +1,19 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title>Window Radiometer</title>
+  <title>放射計の窓</title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Window Radiometer</p>
+    <p>放射計の窓</p>
     </div>
 
     <div class="content">
-      <p>A radiometer is a device that spins when placed in sunlight. Although initially created as a scientific instrument, today they are more like toys. I’ve been fascinated by them for a while, it’s very calming to idly watch mine spin in the morning sun before I leave the house. Since the sunlight passes through a window to reach the radiometer, I decided to incorporate the radiometer into the windowpane itself. This way, something playful can be embedded into something as plain and everyday as a window.</p>
+      <p>放射計とは日光に置いたとき回るものです。元は理学的な道具ですが、今はさらにおもちゃのようなものです。朝家を出る前にくるくると回っている放射計を見るのは落ち着きを与えてくれます。日光は放射計に届く前は窓を通るため、窓ガラスに放射計を組み込みました。このように、当たり前のことに楽しい気分が入っています。</p>
 
-      <p>(If videos do not play, please try another browser.)</p>
+      <p>（動画が動かなかったら、他のブラウザーで開けてみてください。）</p>
       <br>
       <video  autoplay muted loop width="100%">
         <source src="../../image/Radiometer/spin landscape.mp4" type="video/mp4">
