--- a/jp/project/windowclock.html
+++ b/jp/project/windowclock.html
@@ -1,19 +1,19 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title> Window-Like Clock </title>
+  <title> 窓のような時計 </title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Window-Like Clock</p>
+    <p>窓のような時計</p>
     </div>
 
     <div class="content">
 
-      <p>A simple "Clock" that represents the passing of time with an imaginary window. Over the course of the day, the angle of the sunlight projected through the window sweeps across the wall. As the sun sets, the sky seen through the window becomes a gradient of orange and pale pink. As night-time fades in, the Moon crosses the slice of sky seen through the window, turning it into a nightlight.</p>
-      <p>When thinking about time, our primary relationship with it is the day and night cycle - a clock or watch just slices it into hour-long sections and tracks the progress. I decided to create this clock based on the idea of representing sunlight directly. Maybe we can become slightly more aware of the physical connection between Time and Light.</p>
+      <p>架空の窓で時間を表現するシンプルな「とけい」です。時が経ったら、映る日光の角度が壁を渡ります。１日の中に、窓から見た空が夕暮れの色をみせます。夜は月が窓の一切れを通して、常夜灯になります。</p>
+      <p>人と時間の関係といえば、主に昼夜のサイクルです。時計は時間を切って、計ります。日光を直接表現するためこの時計を作ることにしました。時間と光の物理的な関係をもっと気づくようになるかもしれません。</p>
 
     <br>
     <br>
