--- a/jp/project/greenline.html
+++ b/jp/project/greenline.html
@@ -1,23 +1,23 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title> Greenline</title>
+  <title> 緑の線</title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Greenline</p>
+    <p>緑の線</p>
     </div>
 
     <div class="content">
-      <p>Speculative design for a Wayfinding System for a network of Walking Routes spanning London, promoting on-foot travel between London's Green spaces. The mascot adapts the language of the Logo into a mid-step lion cub with a cute face and green heart-shaped tail.</p>
+      <p>ロンドンで公園を通って歩くことを促すためのナビゲーションシステムの実験的なデザインです。マスコットはロゴの形をしている歩いてる子ライオンです。</p>
       <br>
       <br>
 
-      <img src="../image/greenline/logos.png" width="100%"></img>
+      <img src="../../image/greenline/logos.png" width="100%"></img>
       <p></p>
-      <img src="../image/greenline/mascot.png" width="100%"></img>
+      <img src="../../image/greenline/mascot.png" width="100%"></img>
       <p></p>
       <br>
       <div class="twoSplit">
@@ -34,9 +34,9 @@
       </div>
       <p></p>
       <p></p>
-      <img src="../image/greenline/view 01.png" width="100%"></img>
+      <img src="../../image/greenline/view 01.png" width="100%"></img>
       <p></p>
-      <img src="../image/greenline/view 02.png" width="100%"></img>
+      <img src="../../image/greenline/view 02.png" width="100%"></img>
       <p><br><br></p>
 
 
