--- a/jp/project/station-searching.html
+++ b/jp/project/station-searching.html
@@ -1,23 +1,23 @@
 <html>
 
   <link rel="stylesheet" href="../popout stylesheet.css">
-  <title>Station-Searching</title>
+  <title>駅巡り</title>
 </html>
 
 <body class="page">
   <div class="overall">
     <div class="header">
-    <p>Station-Searching</p>
+    <p>駅巡り</p>
     </div>
 
     <div class="content">
-    <p>Original Music and Animated Visuals for Audiovisual Performance at <a href="https://soundcloud.com/curiosityshoppp" target="blank" rel="noreferrer noopener">Curiosity Shop</a>: Hidden Meadow 2021, Streamed Live on Twitch. (Saturday 2021 05 29)</p>
-    <p>Includes Remix of "Hinagiku" by <a href="https://gutevolk.com/en/" target="blank" >Gutevolk</a>.</p>
+    <p><a href="https://soundcloud.com/curiosityshoppp" target="blank" rel="noreferrer noopener">Curiosity Shop</a>のためオリギナル音楽と動画。</p>
+    <p><a href="https://gutevolk.com/en/" target="blank" >Gutevolk</a>の「ひなぎく」のリミックスを含めます。</p>
     <br>
     <iframe src="https://www.youtube.com/embed/3ENTIld1_FQ?vq=hd1080&modestbranding=1&showinfo=0&rel=0&color=white" width="560" height="315" frameborder="0"></iframe>
     <br>
     <p></p>
-    <p>Selected Frames:</p>
+    <p>フレーム:</p>
     <img src="../../image/station-searching/01.png" width=560px;></img>
     <p></p>
     <img src="../../image/station-searching/02.png" width=560px;></img>
@@ -30,15 +30,15 @@
     <p></p>
     <img src="../../image/station-searching/05.png" width=560px;></img>
     <p><br></p>
-    <p> Character </p>
-    <p> The short originally featured a character I designed, modelled, textured and rigged, animated using motion capture. I completed it to the stage of getting motion capture working however was unhappy with the quality of the result. In the end I was unable to use it in the finished short due to time constraints but it was a fun learning experience to create.</p>
+    <p> キャラクター </p>
+    <p> 元に動画はデザイン、モデルとアニメーションを作ったキャラクターを含めました。結局動画に合わなくて使いませんでしたが、いい習う機会でした。</p>
     <br>
     <p></p>
-    <img src="../image/station-searching/09.png" width=560px;></img>
+    <img src="../../image/station-searching/09.png" width=560px;></img>
     <p></p>
-    <img src="../image/station-searching/06.png" width=300px;></img>
+    <img src="../../image/station-searching/06.png" width=300px;></img>
     <p></p>
-    <img src="../image/station-searching/07.png" width=300px;></img>
+    <img src="../../image/station-searching/07.png" width=300px;></img>
     <p><br></p>
 
 
