edit english radiofield links

--- a/structures.html
+++ b/structures.html
@@ -87,7 +87,7 @@
           </div>
 
           <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
-            <p > Radio-Field / 電波庭 </p>
+            <p > Radio-Field</p>
             <p></p>
             <p> 2022 </p>
           </div></a>
