--- a/index-year.html
+++ b/index-year.html
@@ -130,7 +130,7 @@
           </div>
 
           <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
-            <p> Radio-Field / 電波庭 </p>
+            <p> Radio-Field</p>
             <p >Structure</p>
             <p> 2022 </p>
           </div></a>
