--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
 
 
           <a href="javascript:void(0);" onclick="window.open('project/Radiofield.html','14','width=600,height=700')" rel="noreferrer noopener" ><div class="listSplit">
-            <p > Radio-Field / 電波庭 </p>
-            <p id="new"></p>
+            <p > Radio-Field</p>
+            <p ></p>
             <p> 2022 </p>
           </div></a>
 
