add sketchbook imgs

--- a/project/illustration.html
+++ b/project/illustration.html
@@ -33,6 +33,14 @@
 
       <br>
       <br>
+      <img src="../image/illustration/sketchbook b.jpg" width="100%"></img>
+      <p></p>
+      <img src="../image/illustration/sketchbook a.jpg" width="100%"></img>
+      <br>
+      <p>Sketchbook Scans</p>
+
+      <br>
+      <br>
       <img src="../image/illustration/flash.png" width="100%"></img>
       <br>
       <p>Tattoo Flash for an artist based in Austin, Texas.</p>
