--- a/jp/memo.html
+++ b/jp/memo.html
@@ -122,50 +122,50 @@
           <p style="margin-left: 40px;" >A Human Being is a Bundle of senses working hard to perceive the World. Eyes, Ears, Skin and the others are called sensory receptors, but the images carried by these words are much too passive for sensory organs. Human sensors are Boldly open to the world. They aren’t “receptors”, but active, positive organs. An unlimited number of invisible sensory tentacles sprouting from the brain are exploring the world. Let’s think about human beings with this image in mind.</p>
           <p style="margin-left: 40px;">— Hara Kenya, “Haptic” (2014)</p>
           <p>In this world, there are essentially four types of things. </p>
-          <img src="image/unsensory/01.png" width="100%"></img>
+          <img src="../image/unsensory/01.png" width="100%"></img>
           <p>Each thing seemingly exists neatly within its box — however, the divisions are not innate, but are experienced due to the boundaries of human senses: the Tangible and the Intangible are divided according to the bounds of our brains and biology; the invisible-intangible is just as present, and just as real as light and heat — but sit just outside of our ability to be aware of them. </p>
           <p>Humans have invented tools to sense and measure the invisible and intangible — artificial eyes, ears, and fingertips that let us push our hands beyond the curtains of standard sense — extensions of the sensory self. By extending an antenna and tuning into these frequencies, we can dip our senses into an invisible presence, sub-dermal to reality — The unsensory.</p>
           <p><b>The Sensory</b></p>
           <p>The Sensory is the world as experienced by our senses — Light, Heat, Scent, Sound, Touch, Texture, Balance, Weight, and so on. Our body is a finely-tuned sensor for multi-layered channels of information, processed instantaneously by the brain to smoothly build our understanding of the world around us, and ourselves within it. </p>
-          <img src="image/unsensory/02.png" width="100%"></img>
+          <img src="../image/unsensory/02.png" width="100%"></img>
           <p>(Left to Right: Kuma Kengo’s “Cast-Off Snakeskin paper towel”, Fukasawa Naoto’s Juice Skin Packaging, and Hara Kenya’s Humidifier)</p>
           <p>In his exhibition “Haptic”, Hara asked designers to design with special attention to texture and tactile information — either expressing information through a haptic channel or by expressing haptic information visually. For instance: translucent paper towels that mimic the texture of shed-off snakeskin, Juice Boxes whose surfaces mimic the skin of the fruit contained within, and a humidifier that evaporates a grid of individual beads of water like sweat from the pores in the skin. These all heighten some aspect of the tactile, cutting a familiar haptic idea from one context and pasting it into another.<p>
           <p><b>The Cross-Sensory</b></p>
           <p>Likewise, the “Cross-Sensory" could be seen as the transfer of one sense to another. For example, the invention of Braille and Tactile images cross-senses the visual (Written word, Imagery) into the Haptic. By use of FLIR imagery, we can transfer the sensory world of Heat to the sensory world of Vision. Likewise— by use of Echolocation, the physical world is cross-sensed through intuiting information from sound — a mental image or proprioceptive sense of space. Perhaps the most common form of cross-sense, one you’re experiencing right now, is the cross-transfer of written word and imagination, as when a scene, sense, or object is described and then pictured in the brain (or vice-versa).</p>
-          <img src="image/unsensory/03.png" width="100%"></img>
+          <img src="../image/unsensory/03.png" width="100%"></img>
           <p>Those with the neurological condition Synesthesia can naturally Cross-Sense: they may experience sound as visual flashes of colour and shape, or any other cross-sensory expression — those with Spatial Sequence Synesthesia experience sequences of numbers as physical space, for instance seeing months as a spiral or column. Those with Mirror-Touch Synesthesia may physically feel the sensation of being tapped on the shoulder if they observe another person being tapped.</p>
           <p><b>The Unsensory</b></p>
           <p>If that’s the Cross-Sensory, The “Unsensory” could be defined as the imaginary sensation of something intangible, the transmutation of that which is intangible into the realm of the tangible— an imaginary, hallucinatory but tactile sensation of the impossible to sense.</p>
-          <img src="image/unsensory/04.png" width="100%"></img>
+          <img src="../image/unsensory/04.png" width="100%"></img>
           <p>For instance, there exist people who purport to be able to sense the invisible presence of electromagnetic frequencies. Those with Electromagnetic Hypersensitivity (EHS) claim that they have averse reactions to electromagnetic fields at both intense and everyday levels. Symptoms vary between individuals who claim to have the condition: Headaches, Fatigue, Stress, Goosebumps, and Pain. Those with the condition often attempt to live electromagnetic-free lives, often retreating to remote locations and relying on electricity as little as possible. However, despite very real emotional and physical responses, researchers have found that those with EHS were unable to discern between being exposed to electromagnetic fields in a blind setup — suggesting that the response is psychosomatic in nature.</p>
           <p>Even if its validity is doubtful, it’s still a compelling idea. Since we can’t sense it directly, to engage with the Unsensory we must interact on a Cross-Sensory plane. Let’s design into this imaginary sense as if it had texture, weight, presence, and so on.</p>
-          <img src="image/unsensory/05.png" width="100%"></img>
+          <img src="../image/unsensory/05.png" width="100%"></img>
           <br><br>
           <p><b>The Wind blows through a Magnetic Field: Art and Design in an invisible world.</b></p>
           <p>Standing in a field of wheat on a windy day, you can watch the full panorama of the wind’s shape and weight pressing sluggish waves across the gold. If you were to pick a stalk from the field and walk to someplace barren, without grain or grass, you could only use it as a probe to intuit the rippling of the wind at a single point — you’ve essentially “tuned in” to a point in the wind in the same way as a receiver tuning into a single frequency of radio.</p>
-          <img src="image/unsensory/06.png" width="100%"></img>
+          <img src="../image/unsensory/06.png" width="100%"></img>
           <p>Fields of informational “dots” expand a pinpoint of sense into a sensory space. The back of the eyeball is a grid of individual cells that sense light in the world around us, and amalgamate it into the sense of vision. Similarly, a digital photo is a Grid of Pixels that amalgamate to construct the impression of an image from individual pinpoints of colour and tone. Likewise, the Skin is a grid of individual nerve cells across which you can feel the stroking of a fingertip, amalgamating pressure and texture into the sense of touch. If we can register sensory information at a single point, we can sense its shape and space by expanding its dimensions in this way.</p>
           <br>
-          <img src="image/unsensory/07.png" width="100%"></img>
+          <img src="../image/unsensory/07.png" width="100%"></img>
           <p>(Magnetic Fields, 1969, at the MACBA — Photo: Roberto Ruiz)</p>
           <p>One artwork that I feel is especially relevant is the sculpture “Magnetic Fields” by the Greek sculptor Takis. Magnetic pendulums swing over a field of magnetic stalks, which sway and bend towards and away from the pendulum’s magnetic presence. The size and shape of their invisible influence becomes clear through observation of their effect on the field of stalks, similar to wind over wheat — This way, the invisible world of magnetism can be cross-sensed by its physical effect.</p>
           <br>
-          <center><img src="image/unsensory/08.png" width="70%"></img></center>
+          <center><img src="../image/unsensory/08.png" width="70%"></img></center>
           <br>
           <p>Similarly, When you place an electronic object on Anthony Dunne and Fiona Raby’s “<u><a href="http://dunneandraby.co.uk/content/books/90/0">Compass Table</a></u>", it allows you to see the presence of the invisible magnetic fields spooling out around it. This example is especially domestic, making palpable the presence of the electromagnetic fields that emanate from appliances and devices inside of our own homes.</p>
           <br>
-          <img src="image/unsensory/09.png" width="100%"></img>
+          <img src="../image/unsensory/09.png" width="100%"></img>
           <p></p>
-          <img src="image/unsensory/10.png" width="100%"></img>
+          <img src="../image/unsensory/10.png" width="100%"></img>
           <br>
           <p>Nakamura Ryuji’s sculpture “<u><a href="https://www.ryujinakamura.com/2_works/120416_canonneoreal/1_page/canonneoreal.html">Spring</a></u>” is an extremely thin lattice of piano wires. In an evenly-lit room, the lattice is barely visible, almost ghost like. However, when a spotlight is shone through it, it becomes a three-dimensional canvas for light, a field giving tangible form to the projected cone.</p>
           <p>While these projects aim to give demonstrate something that is present but invisible, these next two projects aim to imply the presence of something that is actually absent.</p>
-          <img src="image/unsensory/11.png" width="100%"></img>
+          <img src="../image/unsensory/11.png" width="100%"></img>
           <p></p>
-          <img src="image/unsensory/12.png" width="100%"></img>
+          <img src="../image/unsensory/12.png" width="100%"></img>
           <p>Another project by Nakamura, “<u><a href="https://www.ryujinakamura.com/2_works/101022_llove/1_page/llove.html">Pond</a></u>”, uses 4000 elastic strings to create a tangible “Water-Level” within a home, 70cm off the ground. Here, a permeable barrier, like the surface of water, creates a haptic plane that gives form to an imaginary space.</p>
           <p>Likewise, Nendo’s installation “<u><a href="https://www.nendo.jp/en/works/nendo-breeze-of-light/">Breeze Of Light</a></u>” seeks to create the impression of an invisible flow of air through a room by using flowers made of polarised film to create rippling waves of shadow across the space.</p>
-          <img src="image/unsensory/13.png" width="100%"></img>
+          <img src="../image/unsensory/13.png" width="100%"></img>
           <p>In this case, the impression of the presence of wind is inferred by observing (Cross-Sensing) the ripple of the shadow within the installation. If we somehow were unable to feel the wind’s touch on our skin, It would become an unsensory presence, only apparent through its affect on the flowers around us.</p>
           <p>In summary, we can use this metaphor of fields as a template to Cross-sense the Unsensory. Let’s imagine how we can do this for the phenomenon of Radio Waves.</p>
           <p><b>The Presence of Radio</b></p>
@@ -174,14 +174,14 @@
           <p>As a part of the electromagnetic spectrum, Radio waves are something closer to Light than Sound — Just a form of light that our eyes cannot sense. Radio is lower energy than visible light, each wave carries less power and is therefore more subtle and more slippery than the higher frequency end of the spectrum. This same stretched-out coldness is what gives it the ability to pass through walls — the length of its waves, anywhere between 30cm and 1000m, are so spaced out that they barely interact with the comparatively minuscule atoms of whatever matter is in the way. That’s not to say they are able to penetrate everything, but more that with the wavelengths and minuscule amounts of energy involved, the material must be thick or tightly enmeshed, such as metal. A person is as invisible to a radio wave as a radio wave is to the person.</p>
           <p>Radio is equally as “real” as any other wave. It illuminates and casts shadows, just like visible light. If we could see it, we’d see its spectrum just as vibrantly as a rainbow. Likewise— Thermal radiation, as an infrared wave, is the same kind of thing as light and radio, but is able to be sensed due to its higher wavelength ( It's more energetic, so more able to collide with, excite, and vibrate physical matter).</p>
           <p>For animals, thermoregulation is a key facet of biological metabolism, enabling the enzymes responsible for biological processes to react without denaturing — therefore, the ability to sense and seek heat is an evolutionary necessity. It is thought that the earliest primordial environment where life could have first developed is in the boiling heat of bathypelagic volcanic vents — an environment entirely deprived of light but bathed in heat. To a blind creature in a world of heat, the sensation of environmental temperature must feel as vivid as colour or tone is to the eye. Some animals, such as Pit Vipers, Goldfish, Salmon and Bullfrogs are able to see in infrared. By use of FLIR camera technology, we are able to peer into this vivid world of thermal light for ourselves.</p>
-          <img src="image/unsensory/14.png" width="100%"></img>
+          <img src="../image/unsensory/14.png" width="100%"></img>
           <p>(Thermal image of steam locomotive made by IR camera, by wikipedia user Jagokogo, CC-Attribution-Share Alike 3.0)</p>
           <p>However, unlike heat or visible light, Radio waves are rarely intense enough in the natural world to have a noticeable affect on living tissue— either passing cleanly through smaller organisms, or heating the insides of larger organisms so negligibly as not to make any difference. Biological interaction is key for an organism to be able to sense an electromagnetic wave — something as low frequency as radio, as we’ve established, will rarely interact with matter, and is therefore seemingly impossible to sense biologically.</p>
           <p>Likewise, in the ecosphere, radio sources are both rare and faint enough that there simply wouldn’t be any evolutionary affordance for such a sense. The sources of radio waves in the natural environment are at an atmospheric and astronomical scale — Lightning, Aurora, and Magnetospheric radio on a planetary scale, and Quasars, Pulsars and Radio Galaxies on an astronomical scale. If you looked to the sky with radio-eyes, you’d see a dazzling panorama of radio starlight, horizon to horizon.</p>
-          <img src="image/unsensory/15.png" width="100%"></img>
+          <img src="../image/unsensory/15.png" width="100%"></img>
           <p>(Map of the radio sky at frequency 408 MHz — Lee Zhang via ResearchGate)</p>
           <p>On a more local scale, the environment is not radio-silent: far from it— signals surround us from every direction. Flooded by manmade radio, the frequencies clutter the air sardine-can tight: Radio Stations, Civil aircraft, Satellite beacons, Amateur radio enthusiasts, Encrypted Military channels, Numbers stations, Political Propaganda and Pop Music stations blare out one-over-another in Hertzian space. Large-Array radio telescopes point at the sky, trawling the megahertz for murmurs of life, meanwhile domestic and personal objects such as phones, RFID tags, Walkie-Talkies, and Pagers all whisper radio-light into the interiors of our homes and our pockets. Radio, then, is inescapable.</p>
-          <img src="image/unsensory/16.png" width="100%"></img>
+          <img src="../image/unsensory/16.png" width="100%"></img>
           <p>(Spectrogram of the Radio Wavelength from 3950kHz to 4950kHz taken using WebSDR)</p>
           <p>If we could visualise or sensualise Radio, what would it’s cross-sensory presence be like?</p>
         </div>
