Add Naive Machine

--- a/project/logo.html
+++ b/project/logo.html
@@ -11,7 +11,24 @@
     </div>
 
     <div class="content">
+
       <p>Selected Logo work, both Personal and for Clients.</p>
+      <p> </p>
+      <p> </p>
+
+      <img src="../image/logo/Naive Machine-01.png" width="100%"></img>
+      <img src="../image/logo/Naive Machine-02.png" width="100%"></img>
+      <p> </p>
+      <p> </p>
+
+      <div class="twosplit">
+        <p> Naïve Machine</p>
+        <p> 2024</p>
+      </div>
+      <p> </p>
+      <p> </p>
+      <p> </p>
+      <p> </p>
 
       <img src="../image/logo/Logos layout-01.png" width="100%"></img>
       <div class="twosplit">
