Add Naive Machine

--- a/project/logo.html
+++ b/project/logo.html
@@ -22,7 +22,7 @@
       <p> </p>
 
       <div class="twosplit">
-        <p> Naïve Machine</p>
+        <p> Naïve Machine Wordmark</p>
         <p> 2024</p>
       </div>
       <p> </p>
